# mcp-test

./: .gitignore  README.md  client.py  gemini_client.py  main.py  pgdb.py  pyproject.toml  simple_client.py
.github/: copilot-instructions.md
mcp_resources/: __init__.py  jobs.py
mcp_tools/: get_all_candidate_names.py  get_candidate_details.py  get_candidate_job_applications.py  get_job_application_statuses.py  get_job_applications_with_candidates.py  get_job_details.py  list_all_jobs.py  search_candidates_by_name.py  search_jobs_by_title.py  test_tools.py  update_job_application_status.py  update_job_description.py
postgres/migrations/: 01_create_schema.sql  03_create_job_table.sql  04_create_job_applications_table.sql  05_seed_job_and_applications_data.sql  06_seed_additional_candidates.sql  07_seed_bulk_candidates_and_applications.sql  07_seed_more_data.sql
simple_client/: llm_utils.py  mcp_session.py
