[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
    "psycopg[binary]>=3.2.7",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
]
